package com.stats.umer.stats;

public interface CallbackInterface<T> {
    void onMethodCompletion(T response);
}
