@startuml

title __STATS's Class Diagram__\n

  namespace com.stats.umer.stats {
    class com.stats.umer.stats.CallbackDataParser {
        - showToUser : boolean
        - statusMessage : String
        + getData()
        + getStatus()
        + getStatusMessage()
        + isShowToUser()
        + setData()
        + setShowToUser()
        + setStatus()
        + setStatusMessage()
        ~ CallbackDataParser()
        ~ CallbackDataParser()
        ~ CallbackDataParser()
    }
  }
  

  namespace com.stats.umer.stats {
    interface com.stats.umer.stats.CallbackInterface {
        {abstract} + onMethodCompletion()
    }
  }
  

  com.stats.umer.stats.CallbackDataParser o-- T : data
  com.stats.umer.stats.CallbackDataParser o-- com.stats.umer.stats.Enum.ServerStatusCodes : status


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
